--- a/index.html
+++ b/index.html
@@ -4,28 +4,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Términos y Condiciones - Xiconemi</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
+            font-family: 'Montserrat', sans-serif;
             margin: 0;
             padding: 0;
-        }
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 10px;
-            text-align: center;
-        }
-        main {
-            padding: 20px;
-        }
-        h1 {
+            background-color: #f4f7f6;
             color: #333;
         }
-        p {
+        header {
+            background-color: #2f6c3d;
+            color: #fff;
+            text-align: center;
+            padding: 20px;
+        }
+        header h1 {
+            margin: 0;
+            font-size: 36px;
+        }
+        main {
+            padding: 40px;
+            max-width: 1200px;
+            margin: 0 auto;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+        }
+        main img {
+            display: block;
+            margin: 0 auto 10px auto;
+            width: 300px;
+            height: 200px;
+        }
+        section {
+            margin-bottom: 30px;
+        }
+        section h2 {
+            color: #2f6c3d;
+            font-size: 24px;
+            margin-bottom: 10px;
+        }
+        section p {
             font-size: 16px;
+            line-height: 1.8;
             color: #555;
+        }
+        footer {
+            text-align: center;
+            padding: 20px;
+            background-color: #2f6c3d;
+            color: #fff;
+            font-size: 14px;
+        }
+        footer a {
+            color: #fff;
+            text-decoration: none;
         }
     </style>
 </head>
@@ -36,6 +70,7 @@
 </header>
 
 <main>
+    <img src="logo-png.png" alt="Logo de Xiconemi">
     <section>
         <h2>1. Aceptación de los términos</h2>
         <p>Al utilizar nuestros servicios, aceptas estos términos y condiciones. Si no estás de acuerdo, no utilices nuestros servicios.</p>
@@ -58,9 +93,13 @@
 
     <section>
         <h2>5. Contacto</h2>
-        <p>Si tienes preguntas sobre estos términos, puedes contactarnos en support@xiconemi.com.</p>
+        <p>Si tienes preguntas sobre estos términos, puedes contactarnos en <a href="mailto:support@xiconemi.com">support@xiconemi.com</a>.</p>
     </section>
 </main>
+
+<footer>
+    <p>&copy; 2025 Xiconemi. Todos los derechos reservados.</p>
+</footer>
 
 </body>
 </html>
